--- a/iOSProjectFramework/Info.plist
+++ b/iOSProjectFramework/Info.plist
@@ -19,9 +19,13 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>请允许App使用相机功能</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>请允许App保存图片到相册</string>
 	<key>NSUserActivityTypes</key>
 	<array>
 		<string>FocusIntent</string>
@@ -49,9 +53,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
